--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script>
 		// TODO choose red aliance and blue, make switches opposite (different patterns maybe (die or loose points))
 		// TODO Slightly more frc themed
-		// TODO Dont forget powerups (boost, force, levitate)
+		// TODO Don't forget powerups (boost, force, levitate)
 		// TODO Spend coins (power cubes) on power ups
 		// TODO coins never reset
 
@@ -23,7 +23,7 @@
 
 		function loadImages(loadingPic1, loadingPic2) {
 			var alpha = 1;
-			var delta = -0.004;
+			var delta = -0.012;
 			var canvas = document.getElementById("c");
 			var ctx = canvas.getContext("2d");
 			canvas.width = window.innerWidth;
