--- a/donate.html
+++ b/donate.html
@@ -25,14 +25,14 @@
       canvas.height = window.innerHeight;
       ctx = canvas.getContext("2d");
       console.log("loading store background");
-      backgroundImage.src = "images/about.png";
+      backgroundImage.src = "images/donate.png";
       backgroundImage.onload = function() {
         draw();
       }
     }
 
     function goToDonate() {
-      window.location = "donate.html";
+        window.location = "https://www.technotitans.org/donate.html";
     }
 
     function backToMainMenu(){
